@@ -1,3 +1,8 @@
+2006-12-07  Jean-Louis Martineau <martineau@zmanda.com>
+	* common-src/util.c (lookup_keyword): Use strcasecmp.
+	* common-src/util.c (get_conftoken): Don;t convert to uppercase.
+	* server-src/getconf.c: Don;t print extra '\n' for --list.
+
 2006-12-04  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/amtape.h: Remove file.
 
